--- a/samples/Comprehensive Feature Test.tex
+++ b/samples/Comprehensive Feature Test.tex
@@ -1,12 +1,14 @@
 \documentclass{article}
 \usepackage[utf8]{inputenc}
 \usepackage{parskip}
+\usepackage{graphicx}
+\renewcommand{\figurename}{Image}
 \usepackage{hyperref}
 \hypersetup{
     colorlinks=true,
     urlcolor=blue,
 }
-\title{Comprehensive Feature Test}
+\title{\textbf{Comprehensive Feature Test}}
 \author{LittleTex Test Suite}
 \date{\today}
 \begin{document}
